# Kasa-Nice

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yml  justfile  logging_config.py  main.py  pyproject.toml  requirements.txt  usage.py
.github/workflows/: ci.yml
api/: __init__.py  alerts.py  cloud_service.py  config.py  device_store.py  energy_history.py  events.py  fsutil.py  group_store.py  json_store.py  kasa_service.py  logging_config.py  main.py  routes.py  scene_service.py  scene_store.py  schedule_store.py  scheduler.py  schemas.py  solar.py  vacation.py  vacation_store.py
api/routers/: __init__.py  _helpers.py  alerts.py  backup.py  devices.py  energy.py  groups.py  scenes.py  schedules.py  vacation.py
api/testing/: __init__.py  fake_devices.py
docs/: kasa-metadata.md
tests/: conftest.py  test_alerts.py  test_backup.py  test_cloud_service.py  test_color.py  test_config.py  test_device_store.py  test_energy_history.py  test_energy_insights.py  test_events.py  test_fsutil.py  test_groups.py  test_json_store.py  test_kasa_service.py  test_routes.py  test_scenes.py  test_scheduler.py  test_schedules.py  test_solar.py  test_vacation.py
web/: README.md  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
web/e2e/: alerts.spec.ts  rooms.spec.ts  scenes.spec.ts  schedules.spec.ts  screenshots.spec.ts  smoke.spec.ts
web/src/: app.html
web/src/lib/: format.ts  index.ts
web/src/lib/actions/: dismissable.ts
web/src/lib/api/: client.test.ts  client.ts  types.ts
web/src/lib/components/: AlertsBell.svelte  BrightnessSlider.svelte  ColorControl.svelte  DeviceCard.svelte  DiscoveryPanel.svelte  EnergyChart.svelte  EnergyInsights.svelte  EnergyPanel.svelte  Icon.svelte  PowerSparkline.svelte  RoomsView.svelte  ScenesView.svelte  SchedulesView.svelte  SettingsPanel.svelte  ThemeToggle.svelte  Toaster.svelte  Toggle.svelte  UnreachableCard.svelte  VacationSettings.svelte
web/src/lib/stores/: alerts.svelte.test.ts  alerts.svelte.ts  backup.svelte.test.ts  backup.svelte.ts  config.svelte.ts  devices.svelte.test.ts  devices.svelte.ts  groups.svelte.test.ts  groups.svelte.ts  scenes.svelte.test.ts  scenes.svelte.ts  schedules.svelte.test.ts  schedules.svelte.ts  theme.svelte.ts  toasts.svelte.ts  vacation.svelte.test.ts  vacation.svelte.ts
web/src/lib/utils/: color.test.ts  color.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
web/static/: manifest.webmanifest
