[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kasa-nice"
version = "1.1.0"
description = "A modern, containerized web app for controlling TP-Link Kasa smart home devices"
requires-python = ">=3.14"
authors = [
    {name = "Kasa-Nice Contributors"},
]
keywords = ["kasa", "smart-home", "tp-link", "fastapi", "sveltekit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
]

dependencies = [
    "python-kasa==0.10.2",
    "fastapi>=0.139",
    "uvicorn[standard]>=0.49",
    "tzdata==2026.3",
    "pydantic-settings>=2.14.2",
    # Used to POST alert webhooks. Also pulled in by FastAPI's TestClient, but
    # a runtime feature depends on it now, so it's a first-class dependency.
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1",
    "ruff>=0.15",
]

[project.urls]
Homepage = "https://github.com/ryandavila/Kasa-Nice"
Repository = "https://github.com/ryandavila/Kasa-Nice"
Issues = "https://github.com/ryandavila/Kasa-Nice/issues"

[project.scripts]
kasa-nice = "api.main:run"

[tool.ruff]
target-version = "py314"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings (includes W292 missing-newline-at-end-of-file)
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "pytest>=9.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # FastAPI's TestClient imports httpx via starlette, which Starlette now
    # deprecates in favor of httpx2. Third-party, nothing for us to fix.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
